# meshprocessing

./: .gitignore  .gitmodules  CMakeLists.txt  blender297_import_binary_float_as_mesh.py  buffer.c  buffer.cpp  buffer.h  buffer.hpp  example.c  list.c  list.h  mathutils.c  mathutils.cpp  mathutils.h  mathutils.hpp  mesh.c  mesh.cpp  mesh.h  mesh.hpp  poolalloc.cpp  poolalloc.hpp  poolmem.hpp  references.txt  stl.c  stl.cpp  stl.h  stl.hpp  test_buffer.cpp  test_mathutils.c  test_mathutils.cpp  test_mesh.c  test_mesh.cpp  test_stl.c  test_stl.cpp
apps/: CMakeLists.txt  boolean.cc  boolean2.cc  boolean3.cc  boolean4.cc  boolean4.hh  boolean5.cc  boolean5.hh  boolean6.cc  bsp.cc  bsp.hh  bvh.cc  bvh2.cc  bvh3.cc  bvh4.cc  fast_winding_numbers.cc  mcpip.cc  mcpip_embree.cc  mcwn.cc  mesh.hh  minimal_embree_bvh_build.cc  minimal_embree_bvh_build.hh  near_far_tree.hh  nearest_point_structure.hh  random2.hh  random_ray_directions.hh  self_intersection.cc  stl.cpp  stl.hpp  stl_stats.cc  stl_stats.cpp  timers.hh  tri_tri_intersection.cc  trimesh.hh  vec3.hh  vector_set.hh  winding_numbers.cc
apps/boolean4/: boolean4.cc  boolean4.hh
apps/boolean_embree/: CMakeLists.txt  boolean_embree.cc  boolean_embree.hh  cgal_types.hh  common.hh  indexed_mesh.hh  utils.hh
apps/bvh3/: bvh3.cc  morton_codes.hh
apps/mcpip_embree/: embree_device.hh  embree_do_intersect.hh  embree_num_intersections.hh  embree_scene.hh  mc_sphere_full_samples.hh  mcpip_embree.cc
apps/stl/: ascii.hh  binary.hh  buffer.hh  importer.cc  importer.hh
src/: CMakeLists.txt  list.hpp  mathutils.h  mathutils.hpp  poolalloc.cpp  poolalloc.hpp  stl.cpp  stl.hpp  test_buffer.cpp  test_mathutils.cpp  test_mesh.cpp  test_stl.cpp  vec3.hh
src/bvh/: bvh.cc  bvh.hh  float3.hh
src/io/: CMakeLists.txt  string_buffer.cc  string_buffer.hh  trimesh.cc
src/io/stl/: ascii.cc  ascii.hh  binary.cc  binary.hh  importer.cc  importer.hh  stl_importer.hh  stl_importer_ascii.hh  stl_importer_binary.hh  stl_io.cc  stl_io.hh  string_buffer.hh
src/io/stl/exporter/: stl_exporter_binary.cc  stl_exporter_binary.hh
src/io/stl/importer/: stl_importer.cc  stl_importer_ascii.cc  stl_importer_ascii.hh  stl_importer_binary.cc  stl_importer_binary.hh
src/io/string_buffer/: string_buffer.cc  string_buffer.hh
src/timers/: timers.hh
src/trimesh/: trimesh.cc  trimesh.hh
src/vec3/: vec3.cc  vec3.hh  vec3_t.hh
